# preverjanje

./: pyproject.toml
data/processed/: current_data.csv
data/raw/: students.txt  students_school.xlsx
src/data/: Untitled.ipynb  drift_report.py  process_data.py  stability_tests.py
src/data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/data/processed/: reference_data.csv
src/data/raw/: students_grades.csv
