[tool.poetry]
name = "preverjanje"
version = "0.1.0"
description = ""
authors = ["Lara Rantusa"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.5"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
