[tool.poetry]
name = "iis-preverjanje-vaj"
version = "0.1.0"
description = ""
authors = ["Lara Rantusa"]
readme = "README.md"
packages = [{include = "iis_preverjanje_vaj"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.5"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"
numba = "^0.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
